# OS-Apuntes2

./: CMakeLists.txt  README.md  archivo.txt  ejercicio1.c  ejercicio1.h  ejercicio10.c  ejercicio10.h  ejercicio11.c  ejercicio11.h  ejercicio12.h  ejercicio13.c  ejercicio13.h  ejercicio14.c  ejercicio14.h  ejercicio2.c  ejercicio2.h  ejercicio3.c  ejercicio3.h  ejercicio4.c  ejercicio4.h  ejercicio5.c  ejercicio5.h  ejercicio6.c  ejercicio6.h  ejercicio7.c  ejercicio7.h  ejercicio8.c  ejercicio8.h  ejercicio9.c  ejercicio9.h  main.c
