cmake_minimum_required(VERSION 3.22)
project(apuntes2 C)

set(CMAKE_C_STANDARD 11)

add_executable(apuntes2 main.c
ejercicio1.h ejercicio1.c ejercicio2.h ejercicio2.c ejercicio3.h ejercicio3.c ejercicio4.h ejercicio4.c ejercicio5.h ejercicio5.c ejercicio6.h ejercicio6.c ejercicio7.h ejercicio7.c ejercicio8.h ejercicio8.c ejercicio9.h ejercicio9.c ejercicio10.h ejercicio10.c)
